<resources>
    <string name="app_name">Podcasses</string>
    <string name="account_type">com.podcasses</string>
    <string name="player_channel_description">Podcast player channel</string>

    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_account">Account</string>
    <string name="title_share">Share</string>

    <string name="title_upload">Upload</string>
    <string name="title_search">Search podcast</string>
    <string name="title_settings">Settings</string>
    <string name="title_agreement">Agreement</string>
    <string name="title_logout">Logout</string>

    <string name="not_authenticated">Not authenticated!</string>
    <string name="click_to_authenticate">Click to authenticate</string>

    <string name="username_input">Username</string>
    <string name="display_name_input">Display name</string>
    <string name="password_input">Password</string>
    <string name="email_input">Email</string>
    <string name="login_input">Login</string>
    <string name="or_text">or</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>

    <string name="podcast_files_title">Unpublished uploaded podcast files</string>

    <string name="account_lists_title">Lists</string>

    <string name="subscribed_podcast_channels">Subscribed podcast channels</string>

    <string name="new_podcast_channels">Podcast channels</string>

    <string name="new_podcasts">New podcasts</string>

    <string name="trending_header">Trending podcasts</string>
    <string name="trending_filter">Change filter</string>

    <string name="podcast_channel_add_title">Title</string>
    <string name="podcast_channel_add_author">Author</string>
    <string name="podcast_channel_add_description">Description</string>
    <string name="podcast_channel_add_rssFeedUrl">RSS Feed URL</string>
    <string name="podcast_channel_add_email">Email</string>
    <string name="podcast_channel_add_rss_feed_verify">An email will be sent to the address from the RSS Feed to be verified</string>
    <string name="podcast_channel_add">Add podcast channel</string>

    <string name="podcast_channel_author">Author: </string>
    <string name="podcast_channel_podcasts_count">Episodes</string>
    <string name="podcast_channel_subscribes">Subscribes</string>
    <string name="podcast_channel_views">Views</string>

    <string name="podcast_upload">Upload podcast</string>
    <string name="podcast_title">Title</string>
    <string name="podcast_description">Description</string>
    <string name="podcast_comments">Comments</string>
    <string name="podcast_add">Add podcast</string>
    <string name="podcast_add_comment">Add a comment</string>
    <string name="podcast_views">Views: </string>

    <string name="podcast_add_to_list">Add to a list</string>
    <string name="podcast_add_to_list_name">List name</string>
    <string name="podcast_add_to_list_new">Create new list</string>
    <string name="podcast_add_list_button">Create the list</string>
    <string name="podcast_successfully_added_to_list">The podcast was successfully added to the list!</string>
    <string name="podcast_successfully_created_list">Successfully created list!</string>

    <string name="account_list_successfully_deleted">The list was successfully deleted!</string>
    <string name="undo">Undo</string>

    <string name="history">History</string>
    <string name="liked_podcasts">Liked</string>
    <string name="my_podcasts">My podcastChannels</string>
    <string name="trending_podcasts">Trending</string>
    <string name="downloaded_podcasts">Downloaded</string>
    <string name="podcasts_in_progress">In progress</string>
    <string name="podcasts_from_subscribe">New podcasts</string>

    <string name="account_podcast_channels">Podcast channels</string>

    <string name="privacy">Privacy</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="language">Language</string>

    <string name="account_save_changes">Save changes</string>

    <string name="podcast_successfully_added">Successfully added podcast</string>
    <string name="podcast_channel_successfully_added">Successfully added podcast channel</string>

    <string name="no_internet_connection">No internet connection!</string>
    <string name="could_not_fetch_data">Could not fetch data!</string>

    <string name="successful_logout">You have successfully logged out!</string>
    <string name="successfully_liked">The podcast was successfully liked.</string>
    <string name="successful_like_status_change">Successful like status change.</string>
    <string name="successful_dislike">The podcast was successfully disliked.</string>
    <string name="successfully_deleted_podcast_file">Successfully deleted podcast file.</string>
    <string name="successful_subscribing">Successful subscribing.</string>
    <string name="successful_unsubscribing">Successful unsubscribing.</string>
    <string name="successfully_added_comment">Successfully added comment.</string>
    <string name="successful_response">Successful request.</string>
    <string name="successful_report">Successful sent report.</string>
    <string name="successfully_authenticated">Successfully authenticated</string>
    <string name="error_response">Something went wrong. Please try again!</string>

    <string name="error_invalid_rss_feed">Invalid RSS Feed</string>
    <string name="invalid_user_credentials">Invalid user credentials</string>

    <string name="storage_permission_image">You need to give read storage permission to select image!</string>
    <string name="storage_permission_audio">You need to give read storage permission to select audio!</string>

    <string name="mark_as_played">Mark as played</string>
    <string name="report">Report</string>

    <string name="send">Send</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <string name="trending_filter_header">Choose from the list or manually set a date range.</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>

    <string name="trim_silence">Trim silence</string>
    <string name="trim_silence_tooltip">Remove the pauses</string>
    <string name="share_text">Share the podcast with:</string>

    <string name="loading">Loading…</string>

    <string name="facebook_app_id" translatable="false">941011579576232</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb941011579576232</string>
    <string name="google_web_client_id" translatable="false">478441231698-19toqhduh91mfltt43203hfrtr2im6q1.apps.googleusercontent.com</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-5100562858517923~5316784012</string>

    <string name="settings_select_language">Select Language</string>
    <string name="settings_more">More</string>
    <string name="settings_terms_of_service">Terms of Service</string>
    <string name="settings_privacy_policy">Privacy Policy</string>

    <string-array name="trendingFilter">
        <item>Choose a date period:</item>
        <item>DAILY</item>
        <item>WEEKLY</item>
        <item>MONTHLY</item>
        <item>YEARLY</item>
        <item>Custom</item>
    </string-array>

</resources>
