<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.podcasses.viewmodel.UploadViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.UploadFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/podcast_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/cover_placeholder"
                app:imageUrl="@{viewModel.podcastImage}"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/podcast_image_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_offset"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="@id/podcast_image"
                app:layout_constraintEnd_toEndOf="@id/podcast_image"
                app:layout_constraintTop_toBottomOf="@id/podcast_image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/podcast_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:text="@string/podcast_upload"
                app:cornerRadius="@dimen/small_offset"
                app:elevation="@dimen/medium_offset"
                app:icon="@drawable/ic_file_upload"
                app:layout_constraintTop_toBottomOf="@id/podcast_image_upload" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/podcast_file_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@{viewModel.podcast.podcastFileName}"
                android:visibility="gone"
                app:cornerRadius="@dimen/small_offset"
                app:layout_constraintEnd_toStartOf="@id/podcast_upload_fab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/podcast_upload_fab" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/podcast_upload_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:src="@drawable/ic_file_upload"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/podcast_file_name"
                app:layout_constraintTop_toBottomOf="@id/podcast_image_upload" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/podcast_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/podcast_title"
                android:padding="@dimen/medium_offset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/podcast_upload"
                app:layout_constraintVertical_bias="0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/podcast_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:imeOptions="actionDone|flagNoEnterAction"
                    android:inputType="textMultiLine|textCapSentences"
                    android:singleLine="true"
                    android:text="@={viewModel.podcast.title}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/podcast_privacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:drawSelectorOnTop="true"
                android:prompt="@string/privacy"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toStartOf="@id/podcast_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/podcast_title_input"
                app:privacies="@{viewModel.privacies}"
                app:selectedPrivacy="@={viewModel.podcast.privacyId}" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/podcast_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:drawSelectorOnTop="true"
                android:prompt="@string/category"
                android:spinnerMode="dialog"
                app:categories="@{viewModel.categories}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/podcast_privacy"
                app:layout_constraintTop_toBottomOf="@id/podcast_title_input"
                app:selectedCategory="@={viewModel.podcast.categoryId}" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/podcast_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:drawSelectorOnTop="true"
                android:prompt="@string/language"
                android:spinnerMode="dialog"
                app:languages="@{viewModel.languages}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/podcast_category"
                app:selectedLanguage="@={viewModel.podcast.languageId}" />

            <com.onegravity.rteditor.RTEditText
                android:id="@+id/podcast_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:hint="@string/podcast_description"
                android:imeOptions="actionDone|flagNoEnterAction"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                app:htmlText="@={viewModel.podcast.description}"
                app:layout_constraintTop_toBottomOf="@id/rte_toolbar_container" />

            <LinearLayout
                android:id="@+id/rte_toolbar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/podcast_description"
                app:layout_constraintTop_toBottomOf="@id/podcast_language">

                <include
                    layout="@layout/rte_toolbar_character_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <include
                    layout="@layout/rte_toolbar_paragraph_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/podcast_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:checked="@={viewModel.podcast.hasComments}"
                android:gravity="center"
                android:text="@string/podcast_comments"
                app:layout_constraintBottom_toTopOf="@id/podcast_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/podcast_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/podcast_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:text="@string/podcast_add"
                app:layout_constraintTop_toBottomOf="@id/podcast_comments"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>