<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/description_card_view"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/medium_offset"
                android:layout_marginTop="@dimen/medium_offset"
                android:layout_marginRight="@dimen/medium_offset"
                android:layout_marginBottom="@dimen/medium_offset"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:contentPaddingBottom="@dimen/extra_large_offset"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/username_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_input"
                        android:padding="@dimen/medium_offset"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_input"
                        android:padding="@dimen/medium_offset"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/username_input_layout"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/close_authenticator_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/description_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/description_card_view" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_input"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_offset"
                android:text="@string/login_input"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_text_size"
                app:backgroundTint="@android:color/holo_blue_dark"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/description_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_card_view"
                app:layout_constraintVertical_bias="1" />

            <!--<com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_offset"
                android:gravity="start"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/defaultTextColor"
                app:layout_constraintEnd_toStartOf="@id/register"
                app:layout_constraintStart_toStartOf="@id/description_card_view"
                app:layout_constraintTop_toBottomOf="@+id/login_input" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_offset"
                android:gravity="end"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/defaultTextColor"
                app:layout_constraintEnd_toEndOf="@id/description_card_view"
                app:layout_constraintTop_toBottomOf="@+id/login_input" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/or_text_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_offset"
                app:layout_constraintEnd_toEndOf="@id/description_card_view"
                app:layout_constraintStart_toStartOf="@id/description_card_view"
                app:layout_constraintTop_toBottomOf="@id/or_text_field" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_login"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="@dimen/small_offset"
                app:buttonSize="wide"
                app:layout_constraintEnd_toEndOf="@id/description_card_view"
                app:layout_constraintStart_toStartOf="@id/description_card_view"
                app:layout_constraintTop_toBottomOf="@+id/facebook_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>